# bevy_serde_lens

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
core/: Cargo.toml  README.md
core/src/: de.rs  lib.rs  scope.rs  ser.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
gltf/: Cargo.toml
gltf/src/: lib.rs
main/: Cargo.toml
main/src/: asset.rs  extractors.rs  from_world.rs  interning.rs  lib.rs  macros.rs  save_load.rs  typetag.rs  typetagged.rs  value.rs
main/tests/: derive.rs  typetag.rs
src/: adjacent.rs  asset.rs  batch.rs  childmap.rs  children.rs  eid.rs  entity.rs  extensions.rs  extractors.rs  filter.rs  from_world.rs  interning.rs  lib.rs  linking.rs  macros.rs  projections.rs  root.rs  save_load.rs  typetagged.rs  util.rs
src/prefab/: image.rs  mod.rs  stdmat.rs
src/typetagged/: bevy_object.rs  internal.rs  mod.rs
tests/: adjacent.rs  any.rs  batch.rs  custom_children.rs  default.rs  derive.rs  entity_rc.rs  hierarchy.rs  intern_flags.rs  linking.rs  project.rs  typetag.rs
testsx/: any.rs  derive.rs  entity_rc.rs  intern_flags.rs  project.rs  typetag.rs
