[workspace]
members = ["core"]

[package]
name = "bevy_serde_lens"
version = "0.4.0-rc.2"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_serde_lens"
description = """
Stateful, structural and human-readable serialization crate for the bevy engine.
"""
keywords = ["bevy", "serde", "serialize", "save"]

[features]
## Performance impactful checks at serialization time.
## Enabled by default in `debug` mode regardless of this feature.
extra-checks = []

[lib]
doctest = false

[dependencies]
bevy_serde_lens_core = { version = "0.14", path = "./core"}

bevy_ecs = "0.14.0-rc.2"
bevy_app = "0.14.0-rc.2"
bevy_hierarchy = "0.14.0-rc.2"
bevy_asset = "0.14.0-rc.2"
bevy_reflect = "0.14.0-rc.2"

erased-serde = "0.4.3"
itertools = "0.13.0"
serde = { version = "1.0.197", features = ["derive"] }
rustc-hash = "2.0.0"
thiserror = "1.0.57"
ref-cast = "1.0.22"
scoped-tls-hkt = "0.1.4"
paste = "1.0.14"

[dev-dependencies]
bevy_scene = "0.14.0-rc.2"
criterion = "0.5.1"
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
rand = "0.8.5"
rand_derive2 = "0.1.21"
ron = "0.8.1"
serde_json = { version = "1.0.114", features = ["preserve_order"] }

[[bench]]
name = "bench"
harness = false
