[workspace]
members = ["gltf", "core", "derive"]

[package]
name = "bevy_serde_lens"
version = "0.4.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_serde_lens"
description = """
Stateful, structural and human-readable serialization crate for the bevy engine.
"""
keywords = ["bevy", "serde", "serialize", "save"]

[features]
default = ["derive"]
## Performance impactful checks at serialization time.
## Enabled by default in `debug` mode regardless of this feature.
extra-checks = []
derive = ["bevy_serde_lens_derive"]

[lib]
doctest = false

[dependencies]
bevy_serde_lens_core = { version = "0.14.0", path = "./core" }
bevy_serde_lens_derive = { version = "0.1", path = "./derive", optional = true }

bevy_ecs = "0.14.0"
bevy_app = "0.14.0"
bevy_hierarchy = "0.14.0"
bevy_asset = "0.14.0"
bevy_reflect = "0.14.0"

erased-serde = "0.4.3"
itertools = "0.13.0"
serde = { version = "1.0.197", features = ["derive"] }
rustc-hash = "2.0.0"
thiserror = "1.0.57"
ref-cast = "1.0.22"
scoped-tls-hkt = "0.1.4"
paste = "1.0.14"

[dev-dependencies]
bevy_scene = "0.14.0"
criterion = "0.5.1"
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
rand = "0.8.5"
rand_derive2 = "0.1.21"
ron = "0.8.1"
serde_json = { version = "1.0.114", features = ["preserve_order"] }

[[bench]]
name = "bench"
harness = false
