[package]
name = "bevy_serde_lens_derive"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_serde_lens"
description = """
Derive macro for bevy_serde_lens.
"""

[lib]
proc-macro = true

[dependencies]
syn = "2.0.68"
quote = "1.0.36"
proc-macro2 = "1.0.86"
proc-macro-error = "1.0.4"
