[package]
name = "bevy_serde_project"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
bevy_ecs = "0.13.0"
bevy_app = "0.13.0"
bevy_hierarchy = "0.13.0"
erased-serde = "0.4.3"
itertools = "0.12.1"
serde = "1.0.197"
serde-value = "0.7.0"
rustc-hash = "1.1.0"
bevy_asset = "0.13.0"
thiserror = "1.0.57"

bevy_serde_project_derive = { version = "0.1.0", path = "../derive" }
ref-cast = "1.0.22"

[dev-dependencies]
bevy_reflect = "0.13.0"
